# skillviz

./: .replit  README.md  analytics_dashboard.py  api_endpoints.py  api_server.py  app.py  auth.py  config.py  data_management.py  data_processor.py  emaillabs_service.py  main_app.py  persistent_storage.py  pyproject.toml  replit.md  ui_components.py  visualizations.py
attached_assets/: Pasted--companyLogoThumbUrl-https-imgproxy-justjoinit-tech-bFGNTASeWwjwkqRg-RQp1jBciVPTsqx-1756343982663_1756343982665.txt  Pasted-Parameter-Field-Type-Description-to-String-E-mail-address-of-the-recipient-as-an-array-Max-200-1757084209066_1757084209067.txt  Pasted-ValueError-Invalid-property-specified-for-object-of-type-plotly-graph-objs-heatmap-ColorBar-title-1756529017799_1756529017800.txt
data/: admin_data.json  categories_data.json  metadata.json
